# RPO

./: package-lock.json
backend/: pom.xml
backend/front/: package-lock.json  package.json
backend/front/src/: App.css  App.js  index.js
backend/front/src/components/: Alert.jsx  Another_Home.jsx  ArtistComponent.jsx  ArtistListComponent.jsx  CountryComponent.jsx  CountryListComponent.jsx  Home.jsx  Login.jsx  MuseumComponent.jsx  MuseumListComponent.jsx  MyAccountComponent.jsx  NavigationBarClass.jsx  PaginationComponent.jsx  PaintingComponent.jsx  PaintingListComponent.jsx  SideBar.js  UserComponent.jsx  UserListComponent.jsx
backend/front/src/services/: BackendService.jsx
backend/front/src/utils/: Rdx.jsx  Utils.jsx
backend/src/main/java/ru/iu3/backend/: BackendApplication.java
backend/src/main/java/ru/iu3/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java  SecurityConfiguration.java
backend/src/main/java/ru/iu3/backend/controllers/: ArtistsController.java  CountryController.java  LoginController.java  MuseumController.java  PaintingController.java  SampleController.java  UsersController.java
backend/src/main/java/ru/iu3/backend/models/: Artists.java  Country.java  Museum.java  Painting.java  Users.java
backend/src/main/java/ru/iu3/backend/repositories/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  PaintingRepository.java  UsersRepository.java
backend/src/main/java/ru/iu3/backend/tools/: DataValidationException.java  Utils.java
backend/src/main/resources/: application.properties
fclient/app/: build.gradle
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: themes.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
